fixed color and made scrollbar responsive

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,17 @@
+body{
+  background-color: white;
+}
+
+header{
+  background-color: white;
+}
+
 #root {
   width: 100%;
   margin: 0;
   padding: 0;
   text-align: center;
+  background-color: white;
 }
 
 .logo {
@@ -33,10 +42,6 @@
   }
 }
 
-.card {
-  padding: 2em;
-}
-
 .read-the-docs {
   color: #888;
 }
@@ -57,31 +62,3 @@
   color: white;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-form div {
-  margin: 10px 0;
-}
-
-label {
-  margin-right: 10px;
-}
-
-input {
-  padding: 5px;
-  font-size: 16px;
-}
-
-button {
-  padding: 10px 20px;
-  font-size: 16px;
-  cursor: pointer;
-  background-color: #61dafb;
-  border: none;
-  color: #282c34;
-  margin-top: 10px;
-}
